# afrim-wish

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md
.github/workflows/: coverage.yml  release.yml  rust.yml
ci/: ubuntu-install-packages
data/: full_sample.toml  sample.toml  sample2.toml  suggestions.toml
src/: config.rs  lib.rs  main.rs  rstk_ext.rs
src/window/: mod.rs  rstk_ext.rs  toolkit.rs  tooltip.rs
