[package]
name = "afrim-wish"
version = "0.3.1"
edition = "2021"
description = "Wish interface for the afrim."
repository = "https://github.com/pythonbrad/afrim-wish"
license = "MIT"
readme = "README.md"
authors = ["Brady Fomegne <fomegnemeudje@outlook.com>"]
keywords = ["african", "ime", "typing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["strsim", "rhai"]
strsim = ["afrim/strsim"]
inhibit = ["afrim/inhibit"]
rhai = ["afrim/rhai"]

[dependencies]
afrim = { version = "0.5.2", default-features = false }
clap = "4.4.8"
rstk = "0.1.0"
serde = { version = "1.0.192", features = ["serde_derive"] }
toml = "0.8.8"
