[package]
name = "afrim-wish"
version = "0.3.2"
edition = "2021"
description = "Afrim Wish is an GUI interface for the afrim ime."
repository = "https://github.com/pythonbrad/afrim-wish"
license = "MIT"
readme = "README.md"
authors = ["Brady Fomegne <fomegnemeudje@outlook.com>"]
keywords = ["african", "ime", "typing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["strsim", "rhai"]
strsim = ["afrim/strsim"]
inhibit = ["afrim/inhibit"]
rhai = ["afrim/rhai"]

[dependencies]
afrim = { version = "0.5.4", default-features = false, path = "../afrim/service" }
anyhow = "1.0.82"
clap = "4.5.4"
rstk = "0.3.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
toml = "0.8.12"
